show programming languages in FE

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
         <div id="content">
 
-            Things go here.
+            <h1>Friday at NASA</h1>
+
+            <h2>Languages used</h2>
+
+            <ul id="langs">
+
+            </ul>
 
         </div>
 
