--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 
             </ul>
 
+            <canvas id="langChart" width="400" height="400"></canvas>
+
         </div>
 
         <script src="js/lib/jquery-1.11.3.min.js"></script>
+        <script src="js/Chart.min.js"></script>
         <script src="js/main.js"></script>
 
     </body>
