--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Friday at NASA</title>
+        <title>What Does NASA Use?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,13 +18,8 @@
 
         <div id="content">
 
-            <h1>Friday at NASA</h1>
-
-            <h2>Languages used</h2>
-
-            <ul id="langs">
-
-            </ul>
+            <h1>What Does NASA Use?</h1>
+            <h2>An overview of which programming languages NASA have recently used and how often.</h2>
 
             <canvas id="langChart" width="400" height="400"></canvas>
 
